--- a/src-tauri/plugin/Cargo.toml
+++ b/src-tauri/plugin/Cargo.toml
@@ -20,6 +20,8 @@ time = { version = "0.3.41", features = ["serde"] }
 rmp-serde = "1.3.0"
 strum_macros = "0.27.2"
 serde_bytes = "0.11.19"
+extruct = "0.2.1"
+rusqlite-from-row = {git = "https://github.com/mcmah309/rusqlite-from-row", branch = "patch-1"}
 
 
 [build-dependencies]
